<resources>
    <string name="app_name">Bee Tech</string>
    <string name="login">Login</string>
    <string name="googleLogin">Sign In With Google</string>
    <string name="googleRegis">Sign Up With Google</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_acc">Dont Have an Account ?</string>
    <string name="have_acc">Already Have an Account ?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="send_email">Send Email</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password_2">Forgot Password</string>
    <string name="change_username">Change Username</string>
    <string name="change_category">Change Category</string>
    <string name="update_username">Update Username</string>
    <string name="update_password">Update Password</string>
    <string name="update_comment">Update Comment</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="update_category">Update Category</string>
    <string name="create_category">Create Category</string>
    <string name="insert">Insert</string>
    <string name="change_password">Change Password</string>
    <string name="choose_image">Choose Image</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="my_profile">My Profile</string>
    <string name="add_review">Add Review</string>
    <string name="delete">Delete</string>
    <string name="delete_review">Delete User Review</string>
    <string name="submit">Submit</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="user_list">View Users</string>
    <string name="category_list">View Category</string>
    <string name="ban">Ban</string>
    <string name="unban">Unban</string>
    <string name="login_error">Login Error</string>
    <string name="error_sending_email">Error Sending Email</string>
    <string name="success_sending_email">Email Successfully Sent</string>
    <string name="failed_to_update_password">Failed to update password</string>
    <string name="error_creating_review">Error creating review in database</string>
    <string name="error_creating_comment">Error creating comment in database</string>
    <string name="error_creating_user">Error creating user in database</string>
    <string name="failed_to_delete_category">Failed to delete category</string>
    <string name="failed_to_update_category">Failed to update category</string>
    <string name="failed_to_update_username">Failed to update username</string>
    <string name="failed_to_update_comment">Failed to update comment</string>
    <string name="failed_to_delete_comment">Failed to delete comment</string>
    <string name="failed_to_delete_review">Failed to delete review</string>
    <string name="delete_confirmation">Are you sure you want to delete this item ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_empty">Category can\'t be empty</string>
    <string name="comment_empty">Comment can\'t be empty</string>
    <string name="file_empty">File can\'t be empty</string>
    <string name="email_empty">Email Can\'t be empty</string>
    <string name="username_empty">Username Can\'t be empty</string>
    <string name="password_empty">Password Can\'t be empty</string>
    <string name="confirm_empty">Confirm Password Can\'t be empty</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="old_password_empty">Old Password can\'t be empty</string>
    <string name="new_password_empty">New Password can\'t be empty</string>
    <string name="new_password_must_be_6">New Password must be at least 6 characters</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="invalid_path">Invalid file path</string>
    <string name="title_empty">Title can\'t be empty</string>
    <string name="description_empty">Description can\'t be empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>