<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/input_rounded"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:background="@color/main_bg">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/update_password"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_vertical"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:paddingVertical="0dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.286" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center_vertical"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingVertical="0dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501" />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_rounded"
                android:backgroundTintMode="screen"
                android:elevation="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:shadowColor="#090404"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.788" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_button_rounded"
                android:backgroundTintMode="screen"
                android:elevation="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:shadowColor="#090404"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>