<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/selectedImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/comment_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/blank_image" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/primary_button_rounded"
                android:backgroundTintMode="screen"
                android:elevation="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:shadowColor="#090404"
                android:text="@string/choose_image"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectedImage" />

            <Button
                android:id="@+id/addReview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/primary_button_rounded"
                android:backgroundTintMode="screen"
                android:elevation="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:shadowColor="#090404"
                android:text="@string/add_review"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/descField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/input_rounded"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="12"
                android:padding="12dp"
                app:layout_constraintBottom_toTopOf="@+id/addReview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleField" />

            <EditText
                android:id="@+id/titleField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/input_rounded"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>