<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/input_rounded"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="16dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/delete_confirmation"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.062" />


            <Button
                android:id="@+id/deleteConfirmationButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_rounded"
                android:backgroundTintMode="screen"
                android:elevation="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:shadowColor="#090404"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.71" />

            <Button
                android:id="@+id/cancelConfirmationButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_button_rounded"
                android:backgroundTintMode="screen"
                android:elevation="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:shadowColor="#090404"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.686"
                app:layout_constraintStart_toEndOf="@+id/deleteConfirmationButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.706" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>